Use crochet to get past scrapy errors

--- a/notebooks/Scrapy.ipynb
+++ b/notebooks/Scrapy.ipynb
@@ -2,21 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scrapy\n",
     "from scrapy.crawler import CrawlerRunner\n",
     "from scrapy.utils.log import configure_logging\n",
-    "from twisted.internet import reactor\n",
+    "from crochet import setup, wait_for\n",
     "import json\n",
-    "import logging"
+    "import logging\n",
+    "import time\n",
+    "\n",
+    "setup()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,40 +47,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "@wait_for(10)\n",
     "def run_spider(spider):\n",
-    "    configure_logging()\n",
     "    runner = CrawlerRunner()\n",
-    "    runner.crawl(spider)\n",
-    "    d = runner.join()\n",
-    "    d.addBoth(lambda _: reactor.stop())\n",
-    "    reactor.run()"
+    "    d = runner.crawl(spider)\n",
+    "    return d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-03-24 18:46:19 [scrapy.crawler] INFO: Overridden settings:\n",
-      "{'FEED_FORMAT': 'json', 'FEED_URI': './data/quoteresult.json', 'LOG_LEVEL': 30}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "run_spider(QuotesSpider)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +77,7 @@
      "output_type": "stream",
      "text": [
       "total 16\n",
-      "-rw-r--r--  1 nbvasu  staff  5573 Mar 24 18:46 quoteresult.json\n"
+      "-rw-r--r--  1 nbvasu  staff  5491 Mar 24 18:46 quotejson.pickle\n"
      ]
     }
    ],
@@ -95,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"text\": \"\\u201cA day without sunshine is like, you know, night.\\u201d\", \"author\": \"Steve Martin\", \"tags\": [\"humor\", \"obvious\", \"simile\"]}\n",
+      "{\"text\": \"\\u201cLife is what happens to us while we are making other plans.\\u201d\", \"author\": \"Allen Saunders\", \"tags\": [\"fate\", \"life\", \"misattributed-john-lennon\", \"planning\", \"plans\"]}\n",
       "]"
      ]
     }
@@ -113,18 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_json('data/quoteresult.json')"
+    "df = pd.read_json('./data/quoteresult.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -156,123 +148,123 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>“This life is what you make it. No matter what...</td>\n",
-       "      <td>Marilyn Monroe</td>\n",
-       "      <td>[friends, heartbreak, inspirational, life, lov...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>“It takes a great deal of bravery to stand up ...</td>\n",
-       "      <td>J.K. Rowling</td>\n",
-       "      <td>[courage, friends]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>“If you can't explain it to a six year old, yo...</td>\n",
-       "      <td>Albert Einstein</td>\n",
-       "      <td>[simplicity, understand]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>“You may not be her first, her last, or her on...</td>\n",
-       "      <td>Bob Marley</td>\n",
-       "      <td>[love]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>“I like nonsense, it wakes up the brain cells....</td>\n",
-       "      <td>Dr. Seuss</td>\n",
-       "      <td>[fantasy]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>“I may not have gone where I intended to go, b...</td>\n",
-       "      <td>Douglas Adams</td>\n",
-       "      <td>[life, navigation]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>“The opposite of love is not hate, it's indiff...</td>\n",
-       "      <td>Elie Wiesel</td>\n",
-       "      <td>[activism, apathy, hate, indifference, inspira...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>“It is not a lack of love, but a lack of frien...</td>\n",
-       "      <td>Friedrich Nietzsche</td>\n",
-       "      <td>[friendship, lack-of-friendship, lack-of-love,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>“Good friends, good books, and a sleepy consci...</td>\n",
-       "      <td>Mark Twain</td>\n",
-       "      <td>[books, contentment, friends, friendship, life]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>“Life is what happens to us while we are makin...</td>\n",
-       "      <td>Allen Saunders</td>\n",
-       "      <td>[fate, life, misattributed-john-lennon, planni...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
        "      <td>“The world as we have created it is a process ...</td>\n",
        "      <td>Albert Einstein</td>\n",
        "      <td>[change, deep-thoughts, thinking, world]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>1</th>\n",
        "      <td>“It is our choices, Harry, that show what we t...</td>\n",
        "      <td>J.K. Rowling</td>\n",
        "      <td>[abilities, choices]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>2</th>\n",
        "      <td>“There are only two ways to live your life. On...</td>\n",
        "      <td>Albert Einstein</td>\n",
        "      <td>[inspirational, life, live, miracle, miracles]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>3</th>\n",
        "      <td>“The person, be it gentleman or lady, who has ...</td>\n",
        "      <td>Jane Austen</td>\n",
        "      <td>[aliteracy, books, classic, humor]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>4</th>\n",
        "      <td>“Imperfection is beauty, madness is genius and...</td>\n",
        "      <td>Marilyn Monroe</td>\n",
        "      <td>[be-yourself, inspirational]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>5</th>\n",
        "      <td>“Try not to become a man of success. Rather be...</td>\n",
        "      <td>Albert Einstein</td>\n",
        "      <td>[adulthood, success, value]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>6</th>\n",
        "      <td>“It is better to be hated for what you are tha...</td>\n",
        "      <td>André Gide</td>\n",
        "      <td>[life, love]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>7</th>\n",
        "      <td>“I have not failed. I've just found 10,000 way...</td>\n",
        "      <td>Thomas A. Edison</td>\n",
        "      <td>[edison, failure, inspirational, paraphrased]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>8</th>\n",
        "      <td>“A woman is like a tea bag; you never know how...</td>\n",
        "      <td>Eleanor Roosevelt</td>\n",
        "      <td>[misattributed-eleanor-roosevelt]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>9</th>\n",
        "      <td>“A day without sunshine is like, you know, nig...</td>\n",
        "      <td>Steve Martin</td>\n",
        "      <td>[humor, obvious, simile]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>“This life is what you make it. No matter what...</td>\n",
+       "      <td>Marilyn Monroe</td>\n",
+       "      <td>[friends, heartbreak, inspirational, life, lov...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>“It takes a great deal of bravery to stand up ...</td>\n",
+       "      <td>J.K. Rowling</td>\n",
+       "      <td>[courage, friends]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>“If you can't explain it to a six year old, yo...</td>\n",
+       "      <td>Albert Einstein</td>\n",
+       "      <td>[simplicity, understand]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>“You may not be her first, her last, or her on...</td>\n",
+       "      <td>Bob Marley</td>\n",
+       "      <td>[love]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>“I like nonsense, it wakes up the brain cells....</td>\n",
+       "      <td>Dr. Seuss</td>\n",
+       "      <td>[fantasy]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>“I may not have gone where I intended to go, b...</td>\n",
+       "      <td>Douglas Adams</td>\n",
+       "      <td>[life, navigation]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>“The opposite of love is not hate, it's indiff...</td>\n",
+       "      <td>Elie Wiesel</td>\n",
+       "      <td>[activism, apathy, hate, indifference, inspira...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>“It is not a lack of love, but a lack of frien...</td>\n",
+       "      <td>Friedrich Nietzsche</td>\n",
+       "      <td>[friendship, lack-of-friendship, lack-of-love,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>“Good friends, good books, and a sleepy consci...</td>\n",
+       "      <td>Mark Twain</td>\n",
+       "      <td>[books, contentment, friends, friendship, life]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>“Life is what happens to us while we are makin...</td>\n",
+       "      <td>Allen Saunders</td>\n",
+       "      <td>[fate, life, misattributed-john-lennon, planni...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -280,51 +272,51 @@
       ],
       "text/plain": [
        "                                                 text               author  \\\n",
-       "0   “This life is what you make it. No matter what...       Marilyn Monroe   \n",
-       "1   “It takes a great deal of bravery to stand up ...         J.K. Rowling   \n",
-       "2   “If you can't explain it to a six year old, yo...      Albert Einstein   \n",
-       "3   “You may not be her first, her last, or her on...           Bob Marley   \n",
-       "4   “I like nonsense, it wakes up the brain cells....            Dr. Seuss   \n",
-       "5   “I may not have gone where I intended to go, b...        Douglas Adams   \n",
-       "6   “The opposite of love is not hate, it's indiff...          Elie Wiesel   \n",
-       "7   “It is not a lack of love, but a lack of frien...  Friedrich Nietzsche   \n",
-       "8   “Good friends, good books, and a sleepy consci...           Mark Twain   \n",
-       "9   “Life is what happens to us while we are makin...       Allen Saunders   \n",
-       "10  “The world as we have created it is a process ...      Albert Einstein   \n",
-       "11  “It is our choices, Harry, that show what we t...         J.K. Rowling   \n",
-       "12  “There are only two ways to live your life. On...      Albert Einstein   \n",
-       "13  “The person, be it gentleman or lady, who has ...          Jane Austen   \n",
-       "14  “Imperfection is beauty, madness is genius and...       Marilyn Monroe   \n",
-       "15  “Try not to become a man of success. Rather be...      Albert Einstein   \n",
-       "16  “It is better to be hated for what you are tha...           André Gide   \n",
-       "17  “I have not failed. I've just found 10,000 way...     Thomas A. Edison   \n",
-       "18  “A woman is like a tea bag; you never know how...    Eleanor Roosevelt   \n",
-       "19  “A day without sunshine is like, you know, nig...         Steve Martin   \n",
+       "0   “The world as we have created it is a process ...      Albert Einstein   \n",
+       "1   “It is our choices, Harry, that show what we t...         J.K. Rowling   \n",
+       "2   “There are only two ways to live your life. On...      Albert Einstein   \n",
+       "3   “The person, be it gentleman or lady, who has ...          Jane Austen   \n",
+       "4   “Imperfection is beauty, madness is genius and...       Marilyn Monroe   \n",
+       "5   “Try not to become a man of success. Rather be...      Albert Einstein   \n",
+       "6   “It is better to be hated for what you are tha...           André Gide   \n",
+       "7   “I have not failed. I've just found 10,000 way...     Thomas A. Edison   \n",
+       "8   “A woman is like a tea bag; you never know how...    Eleanor Roosevelt   \n",
+       "9   “A day without sunshine is like, you know, nig...         Steve Martin   \n",
+       "10  “This life is what you make it. No matter what...       Marilyn Monroe   \n",
+       "11  “It takes a great deal of bravery to stand up ...         J.K. Rowling   \n",
+       "12  “If you can't explain it to a six year old, yo...      Albert Einstein   \n",
+       "13  “You may not be her first, her last, or her on...           Bob Marley   \n",
+       "14  “I like nonsense, it wakes up the brain cells....            Dr. Seuss   \n",
+       "15  “I may not have gone where I intended to go, b...        Douglas Adams   \n",
+       "16  “The opposite of love is not hate, it's indiff...          Elie Wiesel   \n",
+       "17  “It is not a lack of love, but a lack of frien...  Friedrich Nietzsche   \n",
+       "18  “Good friends, good books, and a sleepy consci...           Mark Twain   \n",
+       "19  “Life is what happens to us while we are makin...       Allen Saunders   \n",
        "\n",
        "                                                 tags  \n",
-       "0   [friends, heartbreak, inspirational, life, lov...  \n",
-       "1                                  [courage, friends]  \n",
-       "2                            [simplicity, understand]  \n",
-       "3                                              [love]  \n",
-       "4                                           [fantasy]  \n",
-       "5                                  [life, navigation]  \n",
-       "6   [activism, apathy, hate, indifference, inspira...  \n",
-       "7   [friendship, lack-of-friendship, lack-of-love,...  \n",
-       "8     [books, contentment, friends, friendship, life]  \n",
-       "9   [fate, life, misattributed-john-lennon, planni...  \n",
-       "10           [change, deep-thoughts, thinking, world]  \n",
-       "11                               [abilities, choices]  \n",
-       "12     [inspirational, life, live, miracle, miracles]  \n",
-       "13                 [aliteracy, books, classic, humor]  \n",
-       "14                       [be-yourself, inspirational]  \n",
-       "15                        [adulthood, success, value]  \n",
-       "16                                       [life, love]  \n",
-       "17      [edison, failure, inspirational, paraphrased]  \n",
-       "18                  [misattributed-eleanor-roosevelt]  \n",
-       "19                           [humor, obvious, simile]  "
+       "0            [change, deep-thoughts, thinking, world]  \n",
+       "1                                [abilities, choices]  \n",
+       "2      [inspirational, life, live, miracle, miracles]  \n",
+       "3                  [aliteracy, books, classic, humor]  \n",
+       "4                        [be-yourself, inspirational]  \n",
+       "5                         [adulthood, success, value]  \n",
+       "6                                        [life, love]  \n",
+       "7       [edison, failure, inspirational, paraphrased]  \n",
+       "8                   [misattributed-eleanor-roosevelt]  \n",
+       "9                            [humor, obvious, simile]  \n",
+       "10  [friends, heartbreak, inspirational, life, lov...  \n",
+       "11                                 [courage, friends]  \n",
+       "12                           [simplicity, understand]  \n",
+       "13                                             [love]  \n",
+       "14                                          [fantasy]  \n",
+       "15                                 [life, navigation]  \n",
+       "16  [activism, apathy, hate, indifference, inspira...  \n",
+       "17  [friendship, lack-of-friendship, lack-of-love,...  \n",
+       "18    [books, contentment, friends, friendship, life]  \n",
+       "19  [fate, life, misattributed-john-lennon, planni...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -352,8 +344,8 @@
      "output_type": "stream",
      "text": [
       "total 32\n",
-      "-rw-r--r--  1 nbvasu  staff  5491 Mar 24 18:46 quotejson.pickle\n",
-      "-rw-r--r--  1 nbvasu  staff  5573 Mar 24 18:46 quoteresult.json\n"
+      "-rw-r--r--  1 nbvasu  staff  5491 Mar 24 21:33 quotejson.pickle\n",
+      "-rw-r--r--  1 nbvasu  staff  5573 Mar 24 21:31 quoteresult.json\n"
      ]
     }
    ],
