tried custom file feed storage but didnt work

--- a/notebooks/Scrapy.ipynb
+++ b/notebooks/Scrapy.ipynb
@@ -9,48 +9,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scrapy\n",
     "from scrapy.crawler import CrawlerRunner\n",
     "from scrapy.utils.log import configure_logging\n",
-    "from scrapy.extensions.feedexport import FileFeedStorage\n",
+    "from scrapy.settings import Settings\n",
     "from crochet import setup, wait_for\n",
+    "\n",
     "import json\n",
     "import logging\n",
     "import time\n",
     "import os\n",
+    "import source.scrapy.storages\n",
+    "\n",
     "\n",
     "setup()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CustomFileFeedStorage(FileFeedStorage):\n",
-    "    \"\"\"\n",
-    "    A file feed storage extension that overwrites existing files\n",
-    "    \"\"\"\n",
     "\n",
-    "    def __init__(self):\n",
-    "        self.logger = logging.getLogger('CustomFileFeedStorage')\n",
-    "        \n",
-    "    def open(self, spider):\n",
-    "        self.logger.info('custom file feed storage', self.path)\n",
-    "        dirname = os.path.dirname(self.path)\n",
-    "        if dirname and not os.path.exists(dirname):\n",
-    "            os.makedirs(dirname)\n",
-    "        return open(self.path, \"wb\")"
+    "settings = Settings({\n",
+    "    \"FEED_STORAGE_BASE\": {\n",
+    "        \"file\": \"source.scrapy.storages.CustomFileFeedStorage\"\n",
+    "    } \n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,18 +60,18 @@
     "    custom_settings = {\n",
     "        \"LOG_LEVEL\": logging.INFO,\n",
     "        \"FEED_FORMAT\": \"json\",\n",
-    "        \"FEED_URI\": \"./data/quoteresult.json\"        \n",
+    "        \"FEED_URI\": \"./data/quoteresult.json\"\n",
     "    }\n",
     "    \n",
     "    def __init__(self, *args, **kwargs):\n",
     "        super(QuotesSpider, self).__init__(*args, **kwargs)\n",
     "        # This is a hack. Couldnt get the custom file feed storage to work. \n",
-    "        # FEED_STORAGES needs an entry for file and it has to be fully qualified class name,\n",
-    "        # which doesnt seem to work inside jupyter notebooks\n",
+    "        # FEED_STORAGES setting doesnt seem to work. It doesnt register\n",
     "        f = open('./data/quoteresult.json', 'wb')\n",
     "        f.close()\n",
     "        \n",
     "    def parse(self, response):\n",
+    "        self.logger.info('Parse function called on %s', response.url)\n",
     "        for quote in response.css('div.quote'):\n",
     "            yield {\n",
     "                'text': quote.css('span.text::text').extract_first(),\n",
@@ -87,22 +82,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "@wait_for(10)\n",
     "def run_spider(spider):\n",
-    "    runner = CrawlerRunner()\n",
+    "    runner = CrawlerRunner(settings)\n",
     "    d = runner.crawl(spider)\n",
     "    return d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-03-24 22:49:25 [scrapy.crawler] INFO: Overridden settings:\n",
+      "{'FEED_FORMAT': 'json', 'FEED_URI': './data/quoteresult.json', 'LOG_LEVEL': 20}\n",
+      "2020-03-24 22:49:25 [scrapy.extensions.telnet] INFO: Telnet Password: 663000126f357f46\n",
+      "2020-03-24 22:49:25 [scrapy.middleware] INFO: Enabled extensions:\n",
+      "['scrapy.extensions.corestats.CoreStats',\n",
+      " 'scrapy.extensions.telnet.TelnetConsole',\n",
+      " 'scrapy.extensions.memusage.MemoryUsage',\n",
+      " 'scrapy.extensions.feedexport.FeedExporter',\n",
+      " 'scrapy.extensions.logstats.LogStats']\n",
+      "2020-03-24 22:49:25 [scrapy.middleware] INFO: Enabled downloader middlewares:\n",
+      "['scrapy.downloadermiddlewares.httpauth.HttpAuthMiddleware',\n",
+      " 'scrapy.downloadermiddlewares.downloadtimeout.DownloadTimeoutMiddleware',\n",
+      " 'scrapy.downloadermiddlewares.defaultheaders.DefaultHeadersMiddleware',\n",
+      " 'scrapy.downloadermiddlewares.useragent.UserAgentMiddleware',\n",
+      " 'scrapy.downloadermiddlewares.retry.RetryMiddleware',\n",
+      " 'scrapy.downloadermiddlewares.redirect.MetaRefreshMiddleware',\n",
+      " 'scrapy.downloadermiddlewares.httpcompression.HttpCompressionMiddleware',\n",
+      " 'scrapy.downloadermiddlewares.redirect.RedirectMiddleware',\n",
+      " 'scrapy.downloadermiddlewares.cookies.CookiesMiddleware',\n",
+      " 'scrapy.downloadermiddlewares.httpproxy.HttpProxyMiddleware',\n",
+      " 'scrapy.downloadermiddlewares.stats.DownloaderStats']\n",
+      "2020-03-24 22:49:25 [scrapy.middleware] INFO: Enabled spider middlewares:\n",
+      "['scrapy.spidermiddlewares.httperror.HttpErrorMiddleware',\n",
+      " 'scrapy.spidermiddlewares.offsite.OffsiteMiddleware',\n",
+      " 'scrapy.spidermiddlewares.referer.RefererMiddleware',\n",
+      " 'scrapy.spidermiddlewares.urllength.UrlLengthMiddleware',\n",
+      " 'scrapy.spidermiddlewares.depth.DepthMiddleware']\n",
+      "2020-03-24 22:49:25 [scrapy.middleware] INFO: Enabled item pipelines:\n",
+      "[]\n",
+      "2020-03-24 22:49:25 [scrapy.core.engine] INFO: Spider opened\n",
+      "2020-03-24 22:49:25 [scrapy.extensions.logstats] INFO: Crawled 0 pages (at 0 pages/min), scraped 0 items (at 0 items/min)\n",
+      "2020-03-24 22:49:25 [scrapy.extensions.telnet] INFO: Telnet console listening on 127.0.0.1:6023\n",
+      "2020-03-24 22:49:26 [quotes] INFO: Parse function called on http://quotes.toscrape.com/page/1/\n",
+      "2020-03-24 22:49:26 [quotes] INFO: Parse function called on http://quotes.toscrape.com/page/2/\n",
+      "2020-03-24 22:49:26 [scrapy.core.engine] INFO: Closing spider (finished)\n",
+      "2020-03-24 22:49:26 [scrapy.extensions.feedexport] INFO: Stored json feed (20 items) in: ./data/quoteresult.json\n",
+      "2020-03-24 22:49:26 [scrapy.statscollectors] INFO: Dumping Scrapy stats:\n",
+      "{'downloader/request_bytes': 902,\n",
+      " 'downloader/request_count': 4,\n",
+      " 'downloader/request_method_count/GET': 4,\n",
+      " 'downloader/response_bytes': 6624,\n",
+      " 'downloader/response_count': 4,\n",
+      " 'downloader/response_status_count/200': 2,\n",
+      " 'downloader/response_status_count/301': 2,\n",
+      " 'elapsed_time_seconds': 0.532162,\n",
+      " 'finish_reason': 'finished',\n",
+      " 'finish_time': datetime.datetime(2020, 3, 25, 2, 49, 26, 80414),\n",
+      " 'item_scraped_count': 20,\n",
+      " 'log_count/INFO': 13,\n",
+      " 'memusage/max': 75915264,\n",
+      " 'memusage/startup': 75915264,\n",
+      " 'response_received_count': 2,\n",
+      " 'scheduler/dequeued': 4,\n",
+      " 'scheduler/dequeued/memory': 4,\n",
+      " 'scheduler/enqueued': 4,\n",
+      " 'scheduler/enqueued/memory': 4,\n",
+      " 'start_time': datetime.datetime(2020, 3, 25, 2, 49, 25, 548252)}\n",
+      "2020-03-24 22:49:26 [scrapy.core.engine] INFO: Spider closed (finished)\n"
+     ]
+    }
+   ],
    "source": [
     "run_spider(QuotesSpider)"
    ]
