--- a/notebooks/nlp/spacy-intro.ipynb
+++ b/notebooks/nlp/spacy-intro.ipynb
@@ -30,12 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "import spacy\n",
-    "from spacy import displacy"
+    "from spacy import displacy\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -58,27 +59,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Apple ORG\n",
-      "UK GPE\n",
-      "$1 billion MONEY\n"
+      "Apple               ORG                 \n",
+      "UK                  GPE                 \n",
+      "$1 billion          MONEY               \n"
      ]
     }
    ],
    "source": [
     "for ent in doc.ents:\n",
-    "    print(ent.text, ent.label_)"
+    "    print(\"{:<20}{:<20}\".format(ent.text, ent.label_))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +102,6 @@
    ],
    "source": [
     "for token in doc:\n",
-    "#     print(token.text, token.tag_, token.dep_)\n",
     "    print(\"{:<12}{:<10}{:<10}\".format(token.text, token.pos_, token.dep_))"
    ]
   },
@@ -297,6 +297,124 @@
    ],
    "source": [
     "displacy.render(doc, style=\"ent\", jupyter=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>is</td>\n",
+       "      <td>looking</td>\n",
+       "      <td>to</td>\n",
+       "      <td>buy</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>startup</td>\n",
+       "      <td>for</td>\n",
+       "      <td>$</td>\n",
+       "      <td>1</td>\n",
+       "      <td>billion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NNP</td>\n",
+       "      <td>VBZ</td>\n",
+       "      <td>VBG</td>\n",
+       "      <td>TO</td>\n",
+       "      <td>VB</td>\n",
+       "      <td>NNP</td>\n",
+       "      <td>NN</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>$</td>\n",
+       "      <td>CD</td>\n",
+       "      <td>CD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PROPN</td>\n",
+       "      <td>AUX</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>PART</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>PROPN</td>\n",
+       "      <td>NOUN</td>\n",
+       "      <td>ADP</td>\n",
+       "      <td>SYM</td>\n",
+       "      <td>NUM</td>\n",
+       "      <td>NUM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>be</td>\n",
+       "      <td>look</td>\n",
+       "      <td>to</td>\n",
+       "      <td>buy</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>startup</td>\n",
+       "      <td>for</td>\n",
+       "      <td>$</td>\n",
+       "      <td>1</td>\n",
+       "      <td>billion</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0    1        2     3     4      5        6    7    8    9       10\n",
+       "0  Apple   is  looking    to   buy     UK  startup  for    $    1  billion\n",
+       "1    NNP  VBZ      VBG    TO    VB    NNP       NN   IN    $   CD       CD\n",
+       "2  PROPN  AUX     VERB  PART  VERB  PROPN     NOUN  ADP  SYM  NUM      NUM\n",
+       "3  Apple   be     look    to   buy     UK  startup  for    $    1  billion"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tags = [(word, word.tag_, word.pos_, word.lemma_) for word in doc]\n",
+    "pd.DataFrame(tags).T"
    ]
   },
   {
